--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -12,9 +12,8 @@ body{
 backgroud-collor: #494949;
 }
 .galeria{
-margin: 200px auto;
-width: 480px;
-height: 270px;
+margin-left: auto;
+margin-right: auto;
 position: relative;
 overflow: hidden;
 }
