--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -12,8 +12,10 @@ body{
 backgroud-collor: #494949;
 }
 .galeria{
-margin-left: auto;
-margin-right: auto;
+margin: 200px auto;
+width: 480px;
+height: 270px;
+position: relative;
 overflow: hidden;
 }
 .foto{
