--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-    <center><a href="https://api.whatsapp.com/send?phone=5511999035452&text=sua%20mensagem"><img src="1.jpg" class="media-object  img-responsive img-thumbnail"></a></center>
+    <center><a href="https://api.whatsapp.com/send?phone=5511999035452&text=sua%20mensagem"><img src="1.jpg"></a></center>
     </div>
   </body>
 </html>
